--- a/.gitignore
+++ b/.gitignore
@@ -60,7 +60,7 @@ BenchmarkDotNet.Artifacts/
 project.lock.json
 project.fragment.lock.json
 artifacts/
-
+ 
 # StyleCop
 StyleCopReport.xml
 
@@ -348,3 +348,5 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+minhasPendencias.txt
